   and/or band should be shown (when relevent option is enabled) - instead of
   using Material specific genre lists.
2. For remote streams, if genre(s) is empty/undefined then show composer,
   conductor, or band if relevent option is enabled (i.e. skip genre check).
3. Group album tracks by works, or other groupings.

5.6.1
-----
1. Sans-serif 'i' for info icon in navigation drawer.
2. Overlay small update/restart icon over info icon as per menu icon.
3. Fix hiding of 'Server' settings entry if using icons in navigation drawer
   and a password has been set.
4. Fix showing multiple artists for albums on touch devices with links
   disabled.
5. Add missing border to bottom of server settings pages.

5.6.0
-----
 1. Keep navigation drawer titlebar visible, and only scroll contents.
 2. Move 'Information' into navigation drawer titlebar.
 3. Custom MAI icons.
 4. Use block 'i' icon for 'Information' in navigation drawer titlebar.
 5. Add option to show settings actions as a row of icons.
 6. Add option to always show settings (and shortcut) actions.
 7. Add 'Alt+F' as shortcut for 'Advanced search'.
 8. If at top-level then Ctr+F should always open 'Search library', even if 'My
    Music' is hidden.
 9. Fix queue being shown empty when adding/removing a player.
10. Support multiple-genres when checking if to show composer, conductor, or
    band.

5.5.1
-----
1. Enable repeat by default for alarms.
2. Adjust list menu button position to cater for overlay scrollbars in Firefox.
3. Adjust volume control layout for fixed volume players in 'Manage players'
   dialog.
4. Remove composer role restraint when checking if all artists, etc., should
   appear in track subtitle.
5. Only show 'N Compositions' when called from 'Compositions' action.

5.5.0
-----
 1. If using Lyrion theme and colour from cover, then default to green
    highlight.
 2. Add option to show home-screen shortcuts in navigation drawer.
 3. Allow smaller grid items if screen 350px or less.